--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,8 @@ navbar-links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
+
+
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
