Set theme jekyll-theme-hacker

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-hacker
 title: Como publicar codigo estatico en github
 
 # List of links in the navigation bar
