--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-tactile
+theme: jekyll-theme-time-machine
 title: Como publicar codigo estatico en github
 
 # List of links in the navigation bar
