--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-time-machine
+theme: luoyan35714/LessOrMore
 title: Como publicar codigo estatico en github
 
 # List of links in the navigation bar
