--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-remote_theme: luoyan35714/LessOrMore
+remote_theme: victorvoid/space-jekyll-template
+
 title: Como publicar codigo estatico en github
 
 # List of links in the navigation bar
