--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,4 @@ twitter_username: VictorCabello
 github_username:  VictorCabello
 gplus_username:  VictorCabello
 disqus_username: VictorCabello
+profile_picture: http://victorcabello.github.io/img/mifoto.jpg
