--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ user_title: Victor Cabello
 email: vmeca87@gmail.com
 twitter_username: VictorCabello
 github_username:  VictorCabello
+disqus_username: victorcabello
 gplus_username:  VictorCabello
 profile_picture: http://victorcabello.github.io/img/mifoto.jpg
 
