--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-remote_theme: victorvoid/space-jekyll-template
-
 title: Como publicar codigo estatico en github
 
 # Site settings
@@ -31,3 +29,8 @@ links:
     - title: about me
       url: /about
       key_trigger: 4
+
+plugins:
+  - jekyll-remote-theme
+
+remote_theme: victorvoid/space-jekyll-template
